add button correct reading

--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -1,3 +1,12 @@
+<!-- 
+  COMP 229 - Web Application Development (SEC. 003)
+  Fall 2020 - Midterm test
+  Thiago Luiz Batista - Student Number 301110966
+  Work completed on 30/10/2020
+  books.js Midterm File
+-->
+
+
 <% include ../partials/header.ejs %>
 
     <!-- MAIN CONTENT -->
